# tweet

./: .gitignore  Makefile.am  configure.ac
data/: Makefile.am  tweet-applet.desktop.in.in
debian/: awn-applet-tweet.install  changelog  control  copyright  docs  rules  tweet-data.install  tweet.install
src/: Makefile.am  tweet-awn-applet.c  tweet-config.c  tweet-vbox.c  tweet-vbox.h  tweet-window.c
twitter-glib/: twitter-client.c
